@@ -24,7 +24,7 @@ register_listener (const ::CUTS::UUID & test,
                           this->busy_mutex_,
                           0);
 
-  
+
   // Extract the test UUID.
   ACE_Utils::UUID test_uuid;
   test >>= test_uuid;
@@ -46,7 +46,7 @@ register_listener (const ::CUTS::UUID & test,
                         ::CORBA::NO_MEMORY ());
 
       this->listeners_.bind (test_uuid, listeners);
-	  
+
     }
   }
 
@@ -82,7 +82,7 @@ unregister_listener (const ::CUTS::UUID & test, const ::CUTS::UUID & cookie)
   reg_t reg;
   cookie >>= reg.cookie_;
 
-  ACE_DEBUG ((LM_ERROR,
+  ACE_DEBUG ((LM_DEBUG,
               ACE_TEXT ("%T (%t) - %M - unregistering listener for test %s\n"),
               test_uuid.to_string ()->c_str ()));
 
@@ -117,21 +117,21 @@ send_messages (const char * hostname,
                const ::CUTS::UUID & test,
                const ::CUTS::LogMessages & messages)
 {
-  
+
   ACE_READ_GUARD (ACE_RW_Thread_Mutex, guard, this->busy_mutex_);
-  
+
   try
   {
     ACE_Utils::UUID test_uuid;
     test >>= test_uuid;
-	
+
 
     ACE_DEBUG ((LM_INFO,
                 ACE_TEXT ("%T (%t) - %M - received %d message(s) for test %s from %s\n"),
                 messages.length (),
                 test_uuid.to_string ()->c_str (),
                 hostname));
-	
+
 
     // First, notify the global listeners for the new messages.
     for (ACE_Unbounded_Set <reg_t>::CONST_ITERATOR iter (this->global_listeners_);
@@ -146,7 +146,7 @@ send_messages (const char * hostname,
 
     if (0 == this->listeners_.find (test_uuid, listeners))
     {
-     
+
       // Now, notify the specific test of the new messages.
       for (ACE_Unbounded_Set <reg_t>::CONST_ITERATOR iter (*listeners);
            !iter.done ();
